# advent-of-code

./: .gitignore  README.md
2015/: Cargo.toml
2015/1/: run_1.rs  run_2.rs
2015/2/: run_1.rs  run_2.rs
2015/3/: run_1.rs  run_2.rs
2019/: Cargo.toml  README.md
2019/1/: run_1.rs  run_2.rs
2019/10/: README.md  run_1.rs  run_2.rs
2019/11/: README.md  run_1.rs  run_2.rs
2019/12/: README.md  run_1.rs  run_2.rs
2019/13/: README.md  run_1.rs  run_2.rs
2019/14/: README.md  run_1.rs  run_2.rs
2019/15/: README.md  run_1.rs  run_2.rs
2019/16/: README.md  run_1.rs  run_2.rs
2019/17/: README.md  intcode.rs  output_with_path  run_1.rs  run_2.rs
2019/18/: README.md  altered_input  run_1.rs  run_2.rs
2019/19/: README.md  run_1.rs  run_2.rs
2019/2/: run_1.rs  run_2.rs
2019/20/: README.md  run_1.rs  run_2.rs
2019/21/: README.md  intcode.rs  run_1.rs  run_2.rs
2019/22/: README.md  run_1.rs  run_2.rs  run_3.rs
2019/23/: README.md  intcode.rs  run_1.rs  run_2.rs
2019/24/: README.md  run_1.rs  run_2.rs
2019/25/: README.md  intcode.rs  run_1.rs
2019/3/: README.md  run_1.rs  run_2.rs
2019/4/: run_1.rs  run_2.rs
2019/5/: run_1.rs  run_2.rs
2019/6/: run_1.rs  run_2.rs
2019/7/: README.md  run_1.rs  run_2.rs
2019/8/: README.md  run_1.rs  run_2.rs
2019/9/: README.md  run_1.rs  run_2.rs
2020/: .gitignore
2020/1/: run.rb  run_2.rb
2020/10/: run_1.rb  run_2.rb  run_2_take_2.rb  run_2_take_3.rb
2020/11/: run_1.rb  run_1.rs  run_2.rb  run_2.rs  run_2_take_2.rb
2020/12/: run_1.rb  run_1_take_2.rb  run_2.rb
2020/13/: run_1.rb  run_1_take_2.rb  run_2.rb  run_2.rs  run_2_take_2.rb  run_2_take_3.rb  test_input
2020/14/: run_1.rb  run_2.rb
2020/15/: run_1.rb  run_2.rb  run_2.rs  run_2_take_2.rb  run_2_take_3.rb
2020/16/: run_1.rb  (+1 more)
2021/: README.md
(+284 files in other folders)
