[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Ole Friis Østergaard <olefriis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1-1"
path = "./1/run_1.rs"

[[bin]]
name = "1-2"
path = "1/run_2.rs"

[[bin]]
name = "2-1"
path = "2/run_1.rs"

[[bin]]
name = "2-2"
path = "2/run_2.rs"

[[bin]]
name = "3-1"
path = "3/run_1.rs"

[[bin]]
name = "3-2"
path = "3/run_2.rs"

[[bin]]
name = "4-1"
path = "4/run_1.rs"

[[bin]]
name = "4-2"
path = "4/run_2.rs"

[[bin]]
name = "5-1"
path = "5/run_1.rs"

[[bin]]
name = "5-2"
path = "5/run_2.rs"

[[bin]]
name = "6-1"
path = "6/run_1.rs"

[[bin]]
name = "6-2"
path = "6/run_2.rs"

[[bin]]
name = "7-1"
path = "7/run_1.rs"

[[bin]]
name = "7-2"
path = "7/run_2.rs"

[[bin]]
name = "8-1"
path = "8/run_1.rs"

[[bin]]
name = "8-2"
path = "8/run_2.rs"

[[bin]]
name = "9-1"
path = "9/run_1.rs"

[[bin]]
name = "9-2"
path = "9/run_2.rs"

[[bin]]
name = "10-1"
path = "10/run_1.rs"

[[bin]]
name = "10-2"
path = "10/run_2.rs"

[[bin]]
name = "11-1"
path = "11/run_1.rs"

[[bin]]
name = "11-2"
path = "11/run_2.rs"

[[bin]]
name = "12-1"
path = "12/run_1.rs"

[[bin]]
name = "12-2"
path = "12/run_2.rs"

[[bin]]
name = "13-1"
path = "13/run_1.rs"

[[bin]]
name = "13-2"
path = "13/run_2.rs"

[[bin]]
name = "14-1"
path = "14/run_1.rs"

[[bin]]
name = "14-2"
path = "14/run_2.rs"

[[bin]]
name = "15-1"
path = "15/run_1.rs"

[[bin]]
name = "15-2"
path = "15/run_2.rs"

[[bin]]
name = "16-1"
path = "16/run_1.rs"

[[bin]]
name = "16-2"
path = "16/run_2.rs"

[[bin]]
name = "17-1"
path = "17/run_1.rs"

[[bin]]
name = "17-2"
path = "17/run_2.rs"
